--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "tappthat",
   "version": "0.1.0",
-  "private": true,
+"homepage": ".",
+"private": true,
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
